--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "my-app",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": "http://SubhaniKamran.github.io/protest",
 	"dependencies": {
 		"@craco/craco": "^5.7.0",
 		"@fortawesome/react-fontawesome": "^0.1.12",
@@ -15,6 +16,7 @@
 		"craco-plugin-scoped-css": "^1.1.0",
 		"express": "^4.17.1",
 		"express-favicon": "^2.0.1",
+		"gh-pages": "^3.1.0",
 		"joi": "^17.2.1",
 		"jquery": "^3.5.1",
 		"moment": "^2.29.1",
@@ -43,7 +45,9 @@
 		"start": "craco start",
 		"build": "craco build",
 		"test": "craco test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
